modules/k8s/env/k3s/jenkins/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin
      securityContext:
        fsGroup: 1000
        runAsUser: 0
      containers:
        #- image: jenkins/jenkins:2.221-jdk11
        - image: jenkins/jenkins:lts
          imagePullPolicy: Always
          name: jenkins
          ports:
            - name: httpport
              containerPort: 8080
              protocol: TCP
            - name: jnlpport
              containerPort: 50000
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 5
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-data
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: jenkins-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - "k8s-master0"
                      - "k8s-master1"
