modules/k8s/env/k3s/jenkins/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  defaultBackend:
    service:
      name: jenkins-service
      port:
        number: 8080
  rules:
    - host: jenkins.$domain_intra
      http:
        paths:
          - backend:
              service:
                name: jenkins-service
                port:
                  number: 8080
            path: /login
            pathType: Prefix
